# myspots

./: .gitignore  README.md  myspots  myspots.py  pyproject.toml  setup.py
docs/: index.html
docs/cdmx/: index.html
docs/nyc/: index.html
docs/tlv/: index.html
myspots/: __init__.py  app.py  cache.py  cli.py  kml_import.py  site.py  tui.py  utils.py
myspots/templates/: map.html
scripts/: airtable-to-notion-migration.py  backfill_notion_place.py
